# stwo-gpu

cuda/include/: point.cuh  quotients.cuh
cuda/src/: fields.cu  quotients.cu
stwo_gpu_backend/: Cargo.toml  profile_report.nsys-rep  test_bench.sh
stwo_gpu_backend/benches/: accumulate.rs  fibonacci.rs  ntt.rs
stwo_gpu_backend/src/: poly.rs
stwo_gpu_backend/src/cuda/: base_field_vec.rs  bindings.rs  mod.rs
stwo_gpu_backend/src/examples/: mod.rs  wide_fibonacci.rs
stwo_gpu_backend/src/lookups/: gkr.rs
