[package]
name = "stwo-gpu-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cc = "1.0"
# stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "eacd4f0" }
stwo-prover = { git = "https://github.com/schouhy/stwo", rev = "97ae01" }
# stwo-prover = { path= "/mnt/c/proj/stwo/crates/prover"}
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true, rev="33cf8550"}
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true, rev="33cf8550"}
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", optional = true, rev="33cf8550"}
itertools = "0.10.5"
rand = "0.8.5"
criterion = "0.4"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
num-traits = "0.2.19"

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"] }
ctor = "0.1.22"

[build-dependencies]
cmake = "0.1.50"

[features]
default = []
icicle_poc = ["icicle-cuda-runtime", "icicle-core", "icicle-m31"]

[[bench]]
name = "bit_reverse"
harness = false

[[bench]]
name = "batch_inverse"
harness = false

[[bench]]
name = "accumulate"
harness = false

[[bench]]
name = "ntt"
harness = false
